--- a/pages/ad/shop/shop.wxss
+++ b/pages/ad/shop/shop.wxss
@@ -1,7 +1,8 @@
 /* pages/ad/shop/shop.wxss */
 .container{width: 96%;margin-left: 2%;height: 100%;}
 .mytitle{font-size: 36rpx;margin-top: 20rpx;}
-.show_time{width: 100%;height: auto;display: flex;flex-direction: row;font-size: 32rpx;margin-top: 10rpx;}
+.show_time{width: 100%;height: auto;display: flex;flex-direction: row;font-size: 24rpx;margin-top: 10rpx;align-items: center;}
+.time_ctn{width: 130rpx;height: auto;}
 .hspace{width: 10rpx;height: 10rpx;}
 .checkbox{margin-top: 10rpx;margin-bottom: 10rpx;}
 button{margin-top: 50rpx;}
