--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,6 @@
 @import "/components/vant/common/index.wxss";
 
-.top_bar_ctn{width: 100%;height: 68rpx;display: flex;flex-direction: row;background-color: #ff9800;}
+.top_bar_ctn{width: 100%;height: 68rpx;display: flex;flex-direction: row;background-color: #cf6f00;}
 .tbar_btn{width: 80rpx;height: 100%;display: flex;flex-direction: column;align-items: center;}
 .tbar_btn image{width: 100%;height: 40rpx;}
 .tbar_btn text{width: 100%;height: auto;color: white;font-size: 22rpx;text-align: center;}
