--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,15 +1,15 @@
 /* pages/my/my.wxss */
 
-.user_info{width: 100%;height: auto;display: flex;flex-direction: column;background-color: #ff9800;color:white;}
+.user_info{width: 100%;height: auto;display: flex;flex-direction: column;background-color: #cf6f00;color:white;}
 .info_time{width: 100%;height: auto;display: flex;flex-direction: row;}
 .time_text{width:240rpx;margin-left: calc(100% - 260rpx); height:auto;font-size: 26rpx;}
 .info_main{width: 100%;height: auto;display: flex;flex-direction: row;align-items: center;}
 .main_avatar{width: 68rpx;height: 68rpx;border-radius: 50%;margin:0rpx 10rpx;border:1rpx solid snow;}
 .main_nickname{font-size: 42rpx;}
 
-.b_b{width: 100%;height: 30rpx;background-color: #ff9800;padding-top: 10rpx;}
+.b_b{width: 100%;height: 30rpx;background-color: #cf6f00;padding-top: 10rpx;}
 .b_n{width: calc(100% - 4rpx);margin-left:2rpx;height: 20rpx;border-top-left-radius: 20rpx;border-top-right-radius: 20rpx;background-color: white;margin-top: 10rpx;}
-.b_d{width: 100%;height: 40rpx;background-color: #ff9800;padding-bottom: 10rpx;}
+.b_d{width: 100%;height: 40rpx;background-color: #cf6f00;padding-bottom: 10rpx;}
 .b_u{width: calc(100% - 4rpx);margin-left:2rpx;height: 20rpx;border-bottom-left-radius: 20rpx;border-bottom-right-radius: 20rpx;background-color: white;margin-bottom: 10rpx;}
 
 .container{
