--- a/pages/district/join/business/business.wxss
+++ b/pages/district/join/business/business.wxss
@@ -1,46 +1,14 @@
 /* pages/district/join/business/business.wxss */
-.container {
-  width: 100%;height: 100%;overflow: hidden;
-  display: flex;flex-direction: column;align-items: center;
-}
+.container {width: 100%;height: 100%;overflow: hidden;display: flex;flex-direction: column;align-items: center;}
 
-.name_info{
-  width: 100%;height: 70rpx;display: flex;flex-direction: row;align-items: center;
-}
-.name_info .n_icon{
-  height: 100%;width: 30rpx;padding-left: 10rpx;
-}
-.name_info .n_name{
-  font-size: 38rpx;padding-left: 10rpx;
-}
-.name_info .n_area{
-  font-size: 22rpx;padding-top: 18rpx;padding-left: 10rpx;
-}
-.name_info .n_dis{
-  font-size: 22rpx;padding-top: 18rpx;padding-left: 20rpx;
-}
-.name_info .n_pos{
-  width: 35rpx;height: 35rpx;padding-left: 10rpx;padding-top: 17rpx;
-  }
-
-.photo_info{
-  width: 100%;height: 240rpx;display: flex;flex-direction: row;align-items: center;
-  background-color: rgb(233, 233, 231);
-}
-.photo_info .p_img{
-  width: calc(100% - 260rpx);height: calc(100% - 20rpx); margin: 10rpx;
-}
-.photo_info .p_text{
-  width: 260rpx; font-size: 22rpx;display: flex;flex-direction: column;
-}
-.photo_info .p_changebtn{
-  color: gray;text-decoration-line: underline;margin-top: 15rpx;
-}
-.photo_info .p_joinbtn{
-  width: 60%;height: 50rpx;font-size:30rpx;padding-top: 5rpx;
-  border: 1rpx solid gainsboro;border-radius: 5rpx;
-  text-align: center;margin-top: 15rpx;margin-right: 39%;background-color: white;
-}
+.ssqinfo_ctn{width: calc(100% - 40rpx);margin-left: 10rpx;height: 220rpx;display: flex;flex-direction: row;margin-top: 20rpx;border: 1rpx solid sandybrown;border-radius: 10rpx;padding: 5rpx;}
+.ctn_img{width: calc(100% - 300rpx);height: 100%;}
+.ctn_img image{width: 100%;height: 100%;border-radius: 10rpx;}
+.ctn_info{width: 300rpx;height: 100%;display: flex;flex-direction: column;padding-left: 10rpx;}
+.info_name{font-size: 36rpx;display: flex;flex-direction: row;align-items: center;}
+.name_icon{width: 30rpx;height: 30rpx;}
+.info_area{font-size: 24rpx;margin-top: 10rpx;}
+.info_dis{font-size: 24rpx;margin-top: 10rpx;}
 
 .contents_info{width:100%;height: auto;display: flex;flex-direction: column;}
 .contents_info .ctn_way{font-size: 32rpx;margin-top: 20rpx;padding-left: 20rpx;}
@@ -50,20 +18,20 @@
 }
 
 .info_opmsg{font-size: 28rpx;height:auto;width:100%;}
-.info_item{display: flex;flex-direction: row;align-items: center;}
+.info_item{display: flex;flex-direction: row;align-items: center;margin-top: 10rpx;}
 .info_star{width: 10rpx;color:red;}
-.info_tag{width: 140rpx;}
-.info_item input{width: calc(100% - 150rpx);}
-.info_item textarea{width: calc(100% - 150rpx);height: 100rpx;}
+.info_tag{width: 160rpx;}
+.info_item input{width: calc(100% - 270rpx);border: 1rpx solid silver;border-radius: 10rpx;padding: 0 10rpx;}
+.info_item textarea{width: calc(100% - 270rpx);height: 100rpx;border: 1rpx solid silver;border-radius: 10rpx;padding: 5rpx 10rpx;}
 .optype{width:200rpx;height: 35rpx;border:1rpx solid silver;font-size: 24rpx;}
 
-.info_imginfo{font-size: 28rpx;height: auto;width:100%;}
+.info_imginfo{font-size: 28rpx;height: auto;width:100%;margin-top: 10rpx;}
 .info_imginfo .uploadtxt{text-decoration-line: underline;color: blue;}
 .myimg{width: 100%;height: 200rpx;}
 
-.comitbtn{margin-top: 10rpx;width: 90%;background-color: green;margin-left: 5%;color: white;}
+.comitbtn{margin-top: 10rpx;margin-bottom: 50rpx; width: 90%;background-color: green;margin-left: 5%;color: white;}
 .info_space{width: 100%;height: 30rpx;}
-.line_space{width: 100%;height: 2rpx;background-color: silver;margin-top: 15rpx;margin-bottom: 15rpx;}
+.line_space{width: calc(100% - 80rpx);height: 2rpx;background-color: silver;margin-top: 15rpx;margin-bottom: 15rpx;}
 .tips{font-size: 28rpx;color: silver;padding-left: 40rpx;padding-right: 40rpx;}
 .curpos{font-size: 24rpx;padding-left: 15rpx;color: silver;}
 .clickText{color: blue;margin-left: 30rpx;}
