--- a/pages/district/join/person/person.wxml
+++ b/pages/district/join/person/person.wxml
@@ -1,43 +1,42 @@
 <!--pages/district/join/person/person.wxml-->
 <view class="container">
-  <view class="name_info">
-    <image class="n_icon" mode="aspectFit" src="../../../../static/icons/favorite_r.png"></image>
-    <text class="n_name">{{ssqInfo.name}} 社圈</text>
-    <text class="n_area">{{ssqInfo.area}}</text>
-    <text class="n_dis">距离：{{ssqInfo.distance}}km</text>
-    <image class="n_pos" mode="aspectFit" bindtap="openPosition" src="../../../../static/custom/icons/icon_pos_b.png"></image>
-  </view>
-  <view class="photo_info">
-    <image class="p_img" mode="aaaspectFit" src="{{ssqInfo.photo}}"></image>
-    <view class="p_text">
-      <text>商家数量：{{ssqInfo.busCount}}</text>
-      <text>个人商家数量：{{ssqInfo.perCount}}</text>
-      <text>创建者：locky.lee</text>
+
+  <view class="ssqinfo_ctn">
+    <view class="ctn_img">
+      <image src="{{ssqInfo.photo}}" data-src="{{ssqInfo.photo}}" bindtap="previewImage"></image>
+    </view>
+    <view class="ctn_info">
+      <view class="info_name">
+        <image class="name_icon" mode="aspectFit" src="../../../../static/icons/favorite_r.png"></image>
+        <text class="name_txt">{{ssqInfo.name}}</text>
+      </view>
+      <text class="info_area">{{ssqInfo.area}}</text>
+      <text class="info_dis">距离：{{ssqInfo.distance}}km</text>
     </view>
   </view>
+
   <view class="contents_info">
     <text class="ctn_way">入驻方式：个人入驻</text>
     <view class="ctn_info">
       <view class="info_opmsg">
         <view class="info_space"></view>
-        <view class="info_item">
+        <view class="opmsg_item">
           <text class="info_star">*</text>
           <text class="info_tag">经营信息：</text>
           <textarea value="{{shopOpText}}" maxlength="80" type="text" bindinput="onOpTextInfo" placeholder="请输入个人经营的相关信息"></textarea>
         </view>
-        <view class="line_space"></view>
-        <view class="info_item">
+        <view class="opmsg_item">
           <text class="info_star">*</text>
           <text class="info_tag">商家地址：</text>
           <textarea value="{{addrText}}" maxlength="50" type="text" bindinput="onAddrInfo" placeholder="请输地址信息"></textarea>
         </view>
-        <view class="line_space"></view>
-        <view class="info_item">
+        <view class="opmsg_item">
           <text class="info_star">*</text>
           <text class="info_tag">商家联系：</text>
           <input value="{{contactText}}" maxlength="30" type="text" bindinput="onContactInfo" placeholder="请输入商家联系信息"></input>
         </view>
       </view>
+
       <view class="line_space"></view>
       <view class="info_imginfo">
         <text class="info_star">*</text>
@@ -45,6 +44,7 @@
         <text class="uploadtxt" bindtap="uploadImg1">上传</text>
       </view>
       <image class="myimg" src="{{upload_img1}}" mode="aspectFit"></image>
+
       <view class="line_space"></view>
       <view class="info_imginfo">
         <text class="info_star">*</text>
@@ -52,6 +52,7 @@
         <text class="uploadtxt" bindtap="uploadImg">上传</text>
       </view>
       <image class="myimg" src="{{upload_img}}" mode="aspectFit"></image>
+
     </view>
   </view>
   <checkbox-group bindchange="checkboxChange">
