--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -27,16 +27,16 @@
 .ssq_name{ font-size: 38rpx; }
 .ssq_area{ font-size: 24rpx;color: rgb(7, 7, 7);margin-top: 14rpx;margin-left: 5rpx; }
 
-.swiper_txtctn {width: 96%;margin-left:2%;height: 70rpx;border: 4rpx dashed #f8c68d;margin-bottom: 5rpx;margin-top: 15rpx;}
-.swiper_self_txt{width:calc(100% - 4rpx);margin-left:2rpx;height: calc(100% - 2rpx);margin-top: 2rpx;}
+.swiper_txtctn {width: 96%;margin-left:2%;height: 70rpx;margin-bottom: 5rpx;margin-top: 15rpx;}
+.swiper_self_txt{width:calc(100% - 8rpx);height: calc(100% - 4rpx);margin-top: 2rpx;border: 4rpx dashed #f8c68d;}
+.swiper_item {height: 100%;}
 
 .m_t{width: 100%;height: 200rpx;background-color: #cf6f00;border-bottom-left-radius: 50%;border-bottom-right-radius: 50%;}
-.swiper_img_ctn {width: 96%;margin-left:2%;height:320rpx;margin-top: -200rpx;border-radius: 10rpx;overflow: hidden;}
+.swiper_img_ctn {width: 100%;height:320rpx;margin-top: -200rpx;}
 .swiper_self_img {width:100%;height: 100%;border-radius: 10rpx;overflow: hidden;}
-.swiper_item {height: 100%;}
 .swiper_img_item {height: 100%;align-items: center;display: flex;flex-direction: column;border-radius: 10rpx;}
-.swiper_img {width:100%;height: 100%;border-radius: 10rpx;}
-.swiper_img_txtbg{width: 100%;height: 100rpx;background-color: black;opacity: 0.3;position: absolute;margin-top: 220rpx;border-bottom-left-radius: 10rpx;border-bottom-right-radius: 10rpx;}
-.swiper_img_txt{width: 100%;height: 100rpx;color:white;position: absolute;margin-top: 220rpx;font-size: 24rpx;}
+.swiper_img {width:96%; height: 100%;border-radius: 10rpx;}
+.swiper_img_txtbg{width: 96%;height: 100rpx;background-color: black;opacity: 0.3;position: absolute;margin-top: 220rpx;border-bottom-left-radius: 10rpx;border-bottom-right-radius: 10rpx;}
+.swiper_img_txt{width: 96%;height: 100rpx;color:white;position: absolute;margin-top: 220rpx;font-size: 24rpx;}
 
 .shops_ctn{margin-bottom: 100rpx;}
