--- a/pages/shop/shop.wxss
+++ b/pages/shop/shop.wxss
@@ -10,7 +10,7 @@
 .name_value{font-size: 32rpx;}
 .name_ssq{font-size: 20rpx;}
 .space_line{width: 100%;height: 2rpx;background-color: gainsboro;margin-top: 5rpx;margin-bottom: 5rpx;}
-.swiper_imgctn{width: 100%;height: 260rpx;}
+.swiper_imgctn{width: 100%;height: 260rpx;margin-top: -260rpx}
 .blank_space{width: 100%;height: 10rpx;}
 .info_item{font-size: 22rpx;display: flex;flex-direction: row;color: rgb(122, 121, 121);}
 .item_tag{width: 130rpx;height: auto;}
@@ -33,5 +33,14 @@
 
 .ctn_stars{height: auto;width: calc(100% - 120rpx);display: flex;flex-direction: row;}
 .shop_star{width: 25rpx!important;height: 25rpx!important;margin: 5rpx;}
+
+.swiper_bg_ctn{width: 100%;height: 260rpx;display: flex;flex-direction: row;}
+.bg_left{width:50%;height: 60%;background-color: #cf6f00;border-bottom-left-radius: 100%;}
+.left_d{width: 100%;height: 50%;background-color: white;border-bottom-left-radius: 100%;}
+.bg_right{width:50%;height: 60%;margin-top: 11%;background-color: #cf6f00;border-top-right-radius: 100%;}
+.right_d{width:100%;height: 50%;margin-top: 22%;background-color: white;border-top-right-radius: 100%;}
+.bg_center{width: 200rpx;height: 100rpx;border-radius: 50%;background-color: white;position: absolute;margin-left: calc(50% - 115rpx);margin-top: 70rpx;}
+
+
 
 
