--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -15,5 +15,6 @@
   </text>
   <text class="sel_warm_optitle">平台开发运营商：</text>
   <text class="sel_warm_opauth">深圳市小航科技有限公司</text>
+  <text class="sel_warm_opauth">邮箱：locky@szxiaohang.com</text>
 
 </view>
